syntax = "proto3";

package com.huawei.fit.hakuna.kernel.registry.shared;

option optimize_for = LITE_RUNTIME;
option java_package = "com.huawei.fit.hakuna.kernel.registry.shared.proto";
option java_outer_classname = "ApplicationInstanceProto";

import "com/huawei/fit/hakuna/kernel/registry/shared/Application.proto";
import "com/huawei/fit/hakuna/kernel/registry/shared/Worker.proto";


message ApplicationInstance {
  repeated com.huawei.fit.hakuna.kernel.registry.shared.Worker workers = 1;
  com.huawei.fit.hakuna.kernel.registry.shared.Application application = 2;
  repeated int32 formats = 3;
}